--- a/login_page_mobile.html
+++ b/login_page_mobile.html
@@ -11,7 +11,9 @@
   	
 </head>
 <body>
-  	
+s="login">LOGIN</div>
+      			<div class="sign-up">SIGN UP</div>
+      			<div clas  	
   	<div class="iphone-16-plus-1">
     		<div class="vector-parent">
       			<img class="frame-child" alt="" src="Vector 1.svg">
@@ -26,8 +28,6 @@
       			
       			<img class="apple-icon" alt="" src="apple.png">
       			
-      			<div class="login">LOGIN</div>
-      			<div class="sign-up">SIGN UP</div>
       			<div class="user-id">
         				<p class="user-id1">USER ID</p>
       			</div>
